--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,7 +6,9 @@
 
 
 .app {
-  font: var(--font-m);
-  min-height: 100vh;
-
+  background: var(--bg-color);
+  color: var(--primary-color);
+  transition: background 0.2s ease, color 0.2s ease;
 }
+
+
