--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,6 @@
 .app.dark {
   --bg-color: #deb6e0;
-  --primary-color: #ff1a1a;
+  --primary-color: #6f1f1f;
   --secondary-color: #049604;
   --button-color: #ce74ff;
 }
