--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -15,7 +15,8 @@
   display: flex;
   flex-direction: column;
   padding-left: 10px;
-}
+  width: 300px; /* Устанавливаем максимальную ширину блока */
+  }
 
 
 
@@ -37,14 +38,11 @@
   margin-bottom: 10px;
   background: var(--button-color);
 }
-
-
-
 .NavbarTitle {
   font-weight: 800;
 }
 .NavbarSubtitle {
   color: #4b4b4b;
-
 }
+
 
