--- a/src/widgets/Search/ui/Search.module.scss
+++ b/src/widgets/Search/ui/Search.module.scss
@@ -1,14 +1,14 @@
 .HeaderSearchInput {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 300px;
-  font-size: 16px;
-  transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
-  outline: none;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 300px;
+    font-size: 16px;
+    transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    outline: none;
 
-  &:focus {
-    border-color: #FF8042;
-    box-shadow: 0 0 5px rgb(255, 128, 66);
-  }
+    &:focus {
+        border-color: #ff8042;
+        box-shadow: 0 0 5px rgb(255 128 66);
+    }
 }
