--- a/src/pages/Cart/ui/CartPage.module.scss
+++ b/src/pages/Cart/ui/CartPage.module.scss
@@ -1,272 +1,262 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .wrapper {
-  .cart {
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    flex-direction: column;
-    max-width: 920px;
-    margin-top: 100px;
-
-    &-header {
-      display: flex;
-      justify-content: space-between;
-
-      &__left {
+    .cart {
         display: flex;
-        align-items: center;
-        gap: 10px;
+        justify-content: center;
+        margin: 0 auto;
+        flex-direction: column;
+        max-width: 920px;
+        margin-top: 100px;
 
-        .telega-svg {
-          width: 30px;
-          height: 30px;
-
-        }
-
-        &-title {
-          color: black;
-          font-size: 32px;
-          font-family: Roboto;
-          font-weight: 700;
-          letter-spacing: 0.32px;
-          word-wrap: break-word;
-        }
-
-
-      }
-
-      &__right {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-
-        &-img {
-          width: 20px;
-          height: 20px;
-
-        }
-
-        &-title {
-          position: relative;
-          color: #B6B6B6;
-          font-size: 16px;
-          font-family: Roboto, sans-serif;
-          font-weight: 400;
-          word-wrap: break-word;
-          cursor: pointer;
-          transition: color 0.2s;
-
-          &:hover {
-            color: #FE5F1E; // Изменение цвета при наведении
-          }
-        }
-
-      }
-    }
-
-
-    &-content {
-      &__item {
-        display: flex;
-        justify-content: space-between;
-
-        margin-top: 75px;
-
-        &-left {
-          // Стили для левой части контента элемента корзины
-          display: flex;
-          align-items: center;
-
-          &-title {
-            color: black;
-            font-size: 22px;
-            font-family: Roboto;
-            font-weight: 700;
-            letter-spacing: 0.22px;
-            word-wrap: break-word
-          }
-
-          &-subtitle {
-            color: #8D8D8D;
-            font-size: 18px;
-            font-family: Roboto;
-            font-weight: 400;
-            letter-spacing: 0.18px;
-            word-wrap: break-word
-          }
-
-          &-img {
-            width: 80px;
-            height: 80px;
-            margin-right: 15px;
-          }
-
-          &-name {
+        &-header {
             display: flex;
-            flex-direction: column;
+            justify-content: space-between;
 
-          }
+            &__left {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                .telega-svg {
+                    width: 30px;
+                    height: 30px;
+                }
+
+                &-title {
+                    color: black;
+                    font-size: 32px;
+                    font-family: Roboto;
+                    font-weight: 700;
+                    letter-spacing: 0.32px;
+                    word-wrap: break-word;
+                }
+            }
+
+            &__right {
+                display: flex;
+                align-items: center;
+                gap: 5px;
+
+                &-img {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                &-title {
+                    position: relative;
+                    color: #b6b6b6;
+                    font-size: 16px;
+                    font-family: Roboto, sans-serif;
+                    font-weight: 400;
+                    word-wrap: break-word;
+                    cursor: pointer;
+                    transition: color 0.2s;
+
+                    &:hover {
+                        color: #fe5f1e; // Изменение цвета при наведении
+                    }
+                }
+            }
         }
 
-        &-right {
+        &-content {
+            &__item {
+                display: flex;
+                justify-content: space-between;
+                margin-top: 75px;
 
-          display: flex;
-          align-items: center;
-          justify-content: space-evenly;
-          gap: 70px;
+                &-left {
+                    // Стили для левой части контента элемента корзины
+                    display: flex;
+                    align-items: center;
 
-          &-interactive {
+                    &-title {
+                        color: black;
+                        font-size: 22px;
+                        font-family: Roboto;
+                        font-weight: 700;
+                        letter-spacing: 0.22px;
+                        word-wrap: break-word;
+                    }
+
+                    &-subtitle {
+                        color: #8d8d8d;
+                        font-size: 18px;
+                        font-family: Roboto;
+                        font-weight: 400;
+                        letter-spacing: 0.18px;
+                        word-wrap: break-word;
+                    }
+
+                    &-img {
+                        width: 80px;
+                        height: 80px;
+                        margin-right: 15px;
+                    }
+
+                    &-name {
+                        display: flex;
+                        flex-direction: column;
+                    }
+                }
+
+                &-right {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    gap: 70px;
+
+                    &-interactive {
+                        display: flex;
+                        gap: 10px;
+                        align-items: center;
+
+                        &-value {
+                            color: black;
+                            font-size: 22px;
+                            font-family: Roboto;
+                            font-weight: 700;
+                            letter-spacing: 0.22px;
+                            word-wrap: break-word;
+                        }
+
+                        &-btn-decr,
+                        &-btn-incr {
+                            padding: 5px;
+                            border: 2px solid #eb5a1e;
+                            border-radius: 20px;
+                            background-color: transparent;
+                            cursor: pointer;
+                            width: 40px;
+                            height: 40px;
+                            font-weight: bold;
+                            transition: background-color 0.3s, color 0.3s;
+                        }
+
+                        &-btn-decr:hover,
+                        &-btn-incr:hover {
+                            background-color: #eb5a1e;
+                            color: white;
+                        }
+                    }
+                }
+
+                &-totalprice {
+                    color: black;
+                    font-size: 22px;
+                    font-family: Roboto;
+                    font-weight: 700;
+                    letter-spacing: 0.22px;
+                    word-wrap: break-word;
+                }
+
+                &-interactive-btn-del {
+                    padding: 5px;
+                    border: 2px solid #d0d0d0;
+                    border-radius: 20px;
+                    background-color: transparent;
+                    cursor: pointer;
+                    width: 40px;
+                    height: 40px;
+                    font-weight: bold;
+                    transition: background-color 0.3s, color 0.3s;
+
+                    &:hover {
+                        background-color: #eb5a1e;
+                        color: white;
+                    }
+                }
+            }
+        }
+
+        &-sum {
+            margin-top: 40px;
+            margin-bottom: 40px;
             display: flex;
-            gap: 10px;
+            justify-content: space-between;
             align-items: center;
 
-            &-value {
-              color: black;
-              font-size: 22px;
-              font-family: Roboto;
-              font-weight: 700;
-              letter-spacing: 0.22px;
-              word-wrap: break-word
+            &__left {
+                color: black;
+                font-size: 22px;
+                font-family: Roboto;
+                font-weight: 400;
+                letter-spacing: 0.22px;
+                word-wrap: break-word;
+
+                &-span {
+                    color: black;
+                    font-size: 22px;
+                    font-family: Roboto;
+                    font-weight: 700;
+                    letter-spacing: 0.22px;
+                    word-wrap: break-word;
+                }
             }
 
-            &-btn-decr,
-            &-btn-incr {
-              padding: 5px;
-              border: 2px solid #EB5A1E;
-              border-radius: 20px;
-              background-color: transparent;
-              cursor: pointer;
-              width: 40px;
-              height: 40px;
-              font-weight: bold;
-              transition: background-color 0.3s, color 0.3s;
+            &__right {
+                color: black;
+                font-size: 22px;
+                font-family: Roboto;
+                font-weight: 400;
+                letter-spacing: 0.22px;
+                word-wrap: break-word;
+
+                &-span {
+                    color: #fe5f1e;
+                    font-size: 22px;
+                    font-family: Roboto;
+                    font-weight: 700;
+                    letter-spacing: 0.22px;
+                    word-wrap: break-word;
+                }
             }
-
-            &-btn-decr:hover,
-            &-btn-incr:hover {
-              background-color: #EB5A1E;
-              color: white;
-            }
-          }
         }
 
-        &-totalprice {
-          color: black;
-          font-size: 22px;
-          font-family: Roboto;
-          font-weight: 700;
-          letter-spacing: 0.22px;
-          word-wrap: break-word
+        &-nav {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 17px;
         }
-
-        &-interactive-btn-del {
-          padding: 5px;
-          border: 2px solid #D0D0D0;
-          border-radius: 20px;
-          background-color: transparent;
-          cursor: pointer;
-          width: 40px;
-          height: 40px;
-          font-weight: bold;
-          transition: background-color 0.3s, color 0.3s;
-
-          &:hover {
-            background-color: #EB5A1E;
-            color: white;
-          }
-
-        }
-      }
     }
-
-    &-sum {
-      margin-top: 40px;
-      margin-bottom: 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      &__left {
-        color: black;
-        font-size: 22px;
-        font-family: Roboto;
-        font-weight: 400;
-        letter-spacing: 0.22px;
-        word-wrap: break-word;
-
-        &-span {
-          color: black;
-          font-size: 22px;
-          font-family: Roboto;
-          font-weight: 700;
-          letter-spacing: 0.22px;
-          word-wrap: break-word
-        }
-      }
-
-      &__right {
-        color: black;
-        font-size: 22px;
-        font-family: Roboto;
-        font-weight: 400;
-        letter-spacing: 0.22px;
-        word-wrap: break-word;
-
-        &-span {
-          color: #FE5F1E;
-          font-size: 22px;
-          font-family: Roboto;
-          font-weight: 700;
-          letter-spacing: 0.22px;
-          word-wrap: break-word
-        }
-      }
-    }
-
-    &-nav {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 17px;
-    }
-  }
 }
 
 .cart-nav__backbutton,
 .cart-nav__nextbutton {
-  width: 210px;
-  height: 55px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 30px;
-  cursor: pointer;
-  transition: background-color 0.3s, color 0.3s, transform 0.3s, box-shadow 0.3s;
-  font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 0.18px;
-  text-align: center;
+    width: 210px;
+    height: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s, transform 0.3s, box-shadow 0.3s;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.18px;
+    text-align: center;
 
-  &:hover {
-    background-color: lighten(white, 10%);
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    color: #333;
-  }
+    &:hover {
+        background-color: lighten(white, 10%);
+        transform: scale(1.05);
+        box-shadow: 0 0 10px rgb(0 0 0 / 10%);
+        color: #333;
+    }
 }
 
 .cart-nav__backbutton {
-  background: white;
-  border: 1px #D3D3D3 solid;
-  color: #333; // Цвет текста
+    background: white;
+    border: 1px #d3d3d3 solid;
+    color: #333; // Цвет текста
 }
 
 .cart-nav__nextbutton {
-  background: #FE5F1E;
-  border: 1px #ffffff solid;
-  color: white;
+    background: #fe5f1e;
+    border: 1px #fff solid;
+    color: white;
 }
