--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,6 +1,6 @@
 .Navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     font-family: "Roboto Condensed", sans-serif;
     font-size: 20px;
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: column;
     padding-left: 10px;
-    width: 300px; /* Устанавливаем максимальную ширину блока */
 }
 
 .NavbarRight {
