--- a/src/pages/Cart/ui/CartPage.scss
+++ b/src/pages/Cart/ui/CartPage.scss
@@ -30,7 +30,7 @@
                 &-title {
                     color: black;
                     font-size: 32px;
-                    font-family: Roboto;
+                    font-family: 'Roboto', sans-serif;
                     font-weight: 700;
                     letter-spacing: 0.32px;
                     word-wrap: break-word;
@@ -78,7 +78,7 @@
                     &-title {
                         color: black;
                         font-size: 22px;
-                        font-family: Roboto;
+                        font-family: 'Roboto', sans-serif;
                         font-weight: 700;
                         letter-spacing: 0.22px;
                         word-wrap: break-word;
@@ -87,7 +87,7 @@
                     &-subtitle {
                         color: #8d8d8d;
                         font-size: 18px;
-                        font-family: Roboto;
+                        font-family: 'Roboto', sans-serif;
                         font-weight: 400;
                         letter-spacing: 0.18px;
                         word-wrap: break-word;
@@ -119,7 +119,7 @@
                         &-value {
                             color: black;
                             font-size: 22px;
-                            font-family: Roboto;
+                            font-family: 'Roboto', sans-serif;
                             font-weight: 700;
                             letter-spacing: 0.22px;
                             word-wrap: break-word;
@@ -149,7 +149,7 @@
                 &-totalprice {
                     color: black;
                     font-size: 22px;
-                    font-family: Roboto;
+                    font-family: 'Roboto', sans-serif;
                     font-weight: 700;
                     letter-spacing: 0.22px;
                     word-wrap: break-word;
@@ -184,7 +184,7 @@
             &__left {
                 color: black;
                 font-size: 22px;
-                font-family: Roboto;
+                font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 letter-spacing: 0.22px;
                 word-wrap: break-word;
@@ -192,7 +192,7 @@
                 &-span {
                     color: black;
                     font-size: 22px;
-                    font-family: Roboto;
+                    font-family: 'Roboto', sans-serif;
                     font-weight: 700;
                     letter-spacing: 0.22px;
                     word-wrap: break-word;
@@ -202,7 +202,7 @@
             &__right {
                 color: black;
                 font-size: 22px;
-                font-family: Roboto;
+                font-family: 'Roboto', sans-serif;
                 font-weight: 400;
                 letter-spacing: 0.22px;
                 word-wrap: break-word;
@@ -210,7 +210,7 @@
                 &-span {
                     color: #fe5f1e;
                     font-size: 22px;
-                    font-family: Roboto;
+                    font-family: 'Roboto', sans-serif;
                     font-weight: 700;
                     letter-spacing: 0.22px;
                     word-wrap: break-word;
