add NavbarTitle, ProfileButton

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,6 +3,10 @@
 @import "themes/normal";
 @import "themes/dark";
 
+a {
+    text-decoration: none;
+}
+
 .app {
     background: var(--bg-color);
     color: var(--primary-color);
