--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -3,6 +3,7 @@
     --primary-color: #000;
     --secondary-color: #0449e0;
     --button-color: #ff9735;
+    --button-color2: #ff6624;
 }
 
 .app {
