--- a/src/shared/ui/Switcher/Switcher.module.scss
+++ b/src/shared/ui/Switcher/Switcher.module.scss
@@ -44,10 +44,14 @@
     width: 32.5px; /* Уменьшаем ширину в два раза */
 }
 
-.SwitcherLabelLeft {
-
+.SwitcherLabel:hover {
+    opacity: 0.8;
 }
 
-.SwitcherLabelRight {
-
-}
+//.SwitcherLabelLeft {
+//
+//}
+//
+//.SwitcherLabelRight {
+//
+//}
