add pages, sidebar

--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,9 +1,9 @@
 :root {
-    --bg-color: #fff;
-    --primary-color: #000;
-    --secondary-color: #0449e0;
-    --button-color: #ff9735;
-    --button-color2: #ff6624;
+    --bg-color: #f7f7f7;
+    --primary-color: #333;
+    --button-color: #ff7f50;
+    --button-color2: #ff4500;
+    --widget-bg-color: #d5a6bd;
 }
 
 .app {
