--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,8 @@
 .app.dark {
-    --bg-color: #deb6e0;
-    --primary-color: #6f1f1f;
-    --secondary-color: #049604;
-    --button-color: #ce74ff;
-    --button-color2: #ff2f00;
+    /* Темная тема */
+    --bg-color: #2d2d2d;
+    --primary-color: #fff;
+    --button-color: #6a5acd;
+    --button-color2: #ff1493;
+    --widget-bg-color: #483d8b;
 }
